media/error_tc/error_260.txt
G:\SEM-7\ADF\FINAL PROJECT\AlgoBooth\media\source_codes/code_lDZfUsN.cpp: In function 'int main()':
G:\SEM-7\ADF\FINAL PROJECT\AlgoBooth\media\source_codes/code_lDZfUsN.cpp:8:1: error: expected ';' before '}' token
 }
 ^
